# speclink

./: .gitattributes  .gitignore  .spectra.yaml  Cargo.toml  LICENSE  README.md  Spectra-OpenSpec-SDD-完整功能邏輯分析.md
.claude/: settings.json
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  exit_code.rs  human.rs  lib.rs  main.rs  output.rs  tracing_layer.rs
crates/cli/src/commands/: apply_pause.rs  apply_start.rs  archive.rs  artifact.rs  artifact_read.rs  config.rs  delete_change.rs  describe_tools.rs  init.rs  instructions.rs  link.rs  list_changes.rs  list_specs.rs  mod.rs  new_artifact.rs  new_change.rs  propose.rs  show_change.rs  status.rs  task.rs  task_done.rs  task_list.rs  task_undo.rs  unlink.rs
crates/cli/src/snapshots/: speclink_cli__human__tests__array_of_objects.snap  speclink_cli__human__tests__array_of_scalars.snap  speclink_cli__human__tests__empty_array.snap  speclink_cli__human__tests__empty_object.snap  speclink_cli__human__tests__flat_object.snap  speclink_cli__human__tests__nested_object.snap  speclink_cli__human__tests__string_with_newlines.snap  speclink_cli__output__tests__error_envelope_pretty.snap
crates/cli/tests/: apply_lifecycle.rs  archive.rs  archive_skip_specs.rs  archive_snapshots.rs  archive_state_guards.rs  archive_terminal_state.rs  archive_walking_skeleton.rs  artifact_io.rs  artifact_write.rs  artifact_write_snapshots.rs  change_crud.rs  cli.rs  config_cli.rs  describe_tools.rs  etag_concurrency.rs  human_output_v3.rs  human_output_v4.rs  init_config_state.rs  instructions.rs  instructions_cli.rs  instructions_snapshots.rs  json_envelope_v3.rs  json_envelope_v4.rs  propose_create.rs  propose_create_snapshots.rs  snapshots.rs  state_machine_e2e.rs  status.rs  status_snapshots.rs  task_done.rs  task_done_snapshots.rs  task_workflow.rs
crates/cli/tests/snapshots/: archive_snapshots__archive_delta_conflict.snap  archive_snapshots__archive_dry_run_success.snap  archive_snapshots__archive_success.snap  artifact_write_snapshots__artifact_write_already_exists.snap  artifact_write_snapshots__artifact_write_design_success.snap  artifact_write_snapshots__artifact_write_spec_success.snap  cli__envelope_init_non_git.snap  cli__envelope_init_success.snap  cli__envelope_link_failure.snap  cli__envelope_status_success.snap  describe_tools__describe_tools_curated_copilot_sdk.snap  describe_tools__describe_tools_default_json.snap  describe_tools__describe_tools_envelope.snap  describe_tools__describe_tools_full_text.snap  instructions_snapshots__instructions_change_not_found.snap  instructions_snapshots__instructions_design_success.snap  instructions_snapshots__instructions_spec_success.snap  instructions_snapshots__instructions_tasks_success.snap  json_envelope_v4__archive_change_not_found_envelope.snap  json_envelope_v4__archive_change_tasks_incomplete_envelope.snap  json_envelope_v4__archive_skip_specs_envelope.snap  json_envelope_v4__archive_state_transition_invalid_envelope.snap  json_envelope_v4__archive_success_envelope.snap  propose_create_snapshots__propose_create_change_already_exists.snap  propose_create_snapshots__propose_create_fallback_warning.snap  propose_create_snapshots__propose_create_success.snap  snapshots__artifact_read_proposal_hello.snap  snapshots__delete_change_success.snap  snapshots__list_changes_one.snap  snapshots__list_specs_two_caps.snap  snapshots__new_artifact_proposal_hello.snap  snapshots__new_artifact_version_conflict_error.snap  snapshots__new_change_duplicate_error.snap  snapshots__new_change_success.snap  snapshots__show_change_empty.snap  snapshots__show_change_not_found_error.snap  status__status_envelope.snap  status_snapshots__status_change_not_found.snap  status_snapshots__status_only_proposal.snap  status_snapshots__status_with_design_and_spec.snap  (+3 more)
crates/provider/: Cargo.toml
crates/provider-local/: Cargo.toml
crates/provider-local/src/: archive.rs  archive_store.rs  artifact_store.rs  change_store.rs  config_store.rs  error.rs  lib.rs  link_yaml.rs  paths.rs  state_db.rs  state_machine_store.rs  storage.rs  store.rs
crates/provider-local/src/migrations/: v5_config_tables.sql
crates/provider-local/src/snapshots/: speclink_provider_local__link_yaml__tests__link_yaml_v1_fixed.snap
crates/provider-local/tests/: archive_integration.rs  archive_store.rs  config_store.rs  instructions_integration.rs  local_provider_integration.rs  migration_v3.rs  migration_v4.rs  migration_v5.rs  multi_artifact_integration.rs  state_machine_store.rs  task_done_integration.rs
crates/provider/src/: config.rs  config_discovery.rs  config_store.rs  error.rs  jsonpath.rs  lib.rs  model.rs  resolution.rs  types.rs
crates/provider/tests/: config_store_trait.rs  dyn_provider_compile.rs  error_codes.rs  trait_surface.rs
crates/runtime/: Cargo.toml
crates/runtime/instructions/: design.md  proposal.md  spec.md  tasks.md
crates/runtime/src/: apply_ops.rs  archive.rs  archive_ops.rs  artifact.rs  artifact_ops.rs  bootstrap.rs  change_ops.rs  config_ops.rs  dev_precheck.rs  error.rs  git.rs  gitignore.rs  instructions.rs  instructions_ops.rs  lib.rs  ops.rs  paths.rs  project_ops.rs  propose.rs  spec_delta.rs  state_machine.rs  status.rs  task.rs  task_ops.rs  tasks_parser.rs  tool_ops.rs
crates/runtime/src/catalogue/: mod.rs  schemas.rs
crates/runtime/src/embedded/: mod.rs
crates/runtime/src/embedded/schemas/spec-driven/: schema.yaml
crates/runtime/src/embedded/schemas/spec-driven/instructions/: apply.md  archive.md  commit.md  design.md  ingest.md  proposal.md  spec.md  tasks.md
crates/runtime/src/embedded/schemas/spec-driven/templates/: design.md  proposal.md  spec.md  tasks.md
crates/runtime/src/tool_ops/: render.rs
crates/runtime/tests/: actor_resolution.rs  apply_ops.rs  archive_ops.rs  artifact_ops.rs  bootstrap.rs  catalogue_doc_sync.rs  change_ops.rs  error_mapping.rs  instructions_ops_schema_sync.rs  ops.rs  paths.rs  project_ops.rs  state_machine.rs  state_machine_config.rs  task_ops.rs  worktree.rs
doc/: README.md  speclink-design.md  speclink-provider-api-and-runtime-design.md  (+6 more)
(+150 files in other folders)
