[workspace]
resolver = "3"
members = [
    "crates/cli",
    "crates/runtime",
    "crates/provider",
    "crates/provider-local",
]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false
rust-version = "1.85"
version = "0.0.1"
repository = "https://github.com/momochenisme/speclink"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "fs"] }
async-trait = "0.1"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "5"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
tempfile = "3"
assert_cmd = "2"
predicates = "3"
insta = { version = "1", features = ["json"] }
