[workspace]
resolver = "3"
members = [
    "crates/cli",
    "crates/runtime",
    "crates/provider",
    "crates/provider-local",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
publish = false
repository = "https://github.com/momochenisme/speclink"

[workspace.dependencies]
speclink-cli = { path = "crates/cli" }
speclink-runtime = { path = "crates/runtime" }
speclink-provider = { path = "crates/provider" }
speclink-provider-local = { path = "crates/provider-local" }

async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10"
hex = "0.4"
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }

tempfile = "3"
assert_cmd = "2"
predicates = "3"
insta = { version = "1", features = ["json", "yaml"] }

[workspace.lints.clippy]
doc_markdown = "allow"
module_name_repetitions = "allow"
