[package]
name = "cli"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
description = "SpecLink command line interface"

[lib]
name = "cli"
path = "src/lib.rs"

[[bin]]
name = "speclink"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
provider = { path = "../provider" }
provider-local = { path = "../provider-local" }
runtime = { path = "../runtime" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
insta = { workspace = true }
predicates = { workspace = true }
rusqlite = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
