[package]
name = "speclink-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
description = "SpecLink CLI"

[lints]
workspace = true

[[bin]]
name = "speclink"
path = "src/main.rs"

[lib]
name = "speclink_cli"
path = "src/lib.rs"

[dependencies]
speclink-runtime.workspace = true
speclink-provider.workspace = true
clap.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tempfile.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
insta = { workspace = true, features = ["json"] }
serde_yaml.workspace = true
rusqlite.workspace = true
sha2.workspace = true
hex.workspace = true
