[package]
name = "speclink-provider-local"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
description = "Filesystem-backed provider implementation for SpecLink (LocalProvider)"

[lints]
workspace = true

[dependencies]
speclink-provider.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
rusqlite.workspace = true
uuid.workspace = true
sha2.workspace = true
hex.workspace = true
time.workspace = true
tempfile.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }
insta.workspace = true
