[package]
name = "provider"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
description = "SpecLink provider trait, shared data model, configuration loading and provider resolution"

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
dirs = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
