[package]
name = "speclink-provider"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
description = "Provider trait and shared data types for SpecLink"

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true
serde_yaml.workspace = true
