[package]
name = "runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
description = "SpecLink runtime — workflow orchestration over the provider trait"

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
provider = { path = "../provider" }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync"] }

[dev-dependencies]
async-trait = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "rt"] }
