[package]
name = "speclink-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
description = "SpecLink runtime: bootstrap orchestration, path resolution, and provider wiring"

[lints]
workspace = true

[dependencies]
speclink-provider.workspace = true
speclink-provider-local.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
uuid.workspace = true
time.workspace = true
sha2.workspace = true
hex.workspace = true
tokio.workspace = true
rusqlite.workspace = true
tempfile.workspace = true
whoami.workspace = true
serde_json.workspace = true
regex-lite.workspace = true

[dev-dependencies]
tempfile.workspace = true
rusqlite.workspace = true
insta.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }
